# docbottask

./: .gitignore  README.md  app.py  build_index.py  model_download.py  pyproject.toml  test_db.py
configure/: config.yaml
docintel_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logger/: __init__.py  config_manager.py  logger_system.py
src/: chatbot.py  database.py  document_processor.py  llm_engine.py  vector_store.py
